--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: 'apache/incubator-streampipes'
-          path: './incubator-streampipes'
+          path: 'incubator-streampipes'
+          ref: $GIT_BRANCH
       - name: Checkout
         uses: actions/checkout@v1
       - name: Set up JDK 1.8
