--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           repository: 'apache/incubator-streampipes'
           path: 'incubator-streampipes'
-          ref: $GIT_BRANCH
+          ref: $GITHUB_BRANCH
       - name: Checkout
         uses: actions/checkout@v1
       - name: Set up JDK 1.8
