--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,19 +4,20 @@ on:
   push:
     branches:
       - dev
-env:
-  GITHUB_BRANCH: ${GITHUB_REF##*/}
-
 jobs:
   build-and-push-to-docker:
     runs-on: ubuntu-latest
     steps:
+      - name: Set Branch env variable
+        run: |
+          echo "::set-env name=GITHUB_BRANCH::${{github.ref##*/}}"
+          echo ${{ env.GITHUB_BRANCH }}
       - name: Checkout incubator-streampipes project
         uses: actions/checkout@v2
         with:
           repository: 'apache/incubator-streampipes'
           path: 'incubator-streampipes'
-          ref: $GITHUB_BRANCH
+          ref: ${{ env.GITHUB_BRANCH }}
       - name: Checkout
         uses: actions/checkout@v1
       - name: Set up JDK 1.8
