--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - name: Set Branch env variable
         run: |
-          echo "::set-env name=GITHUB_BRANCH::${{github.ref##*/}}"
+          echo "::set-env name=GITHUB_BRANCH::${GITHUB_REF##*/}"
           echo ${{ env.GITHUB_BRANCH }}
       - name: Checkout incubator-streampipes project
         uses: actions/checkout@v2
