Add deployment settings to start pipeline dialog

--- a/streampipes-node-controller-container/src/main/resources/node_info.yml
+++ b/streampipes-node-controller-container/src/main/resources/node_info.yml
@@ -45,3 +45,4 @@ nodeInfo:
     supportedPipelineElementAppIds:
       - "pipeline-elements-all-jvm"
       - "sources-watertank-simulator"
+      - "org.apache.streampipes.sinks.internal.jvm.dashboard"
