--- a/ui/package.json
+++ b/ui/package.json
@@ -99,6 +99,7 @@
     "systemjs": "^0.21.6",
     "trix": "0.10.1",
     "tslib": "^1.11.1",
+    "ng-pick-datetime": "^7.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
