STREAMPIPES-58: Add map widget

--- a/ui/angular.json
+++ b/ui/angular.json
@@ -18,7 +18,12 @@
             "tsConfig": "src/tsconfig.app.json",
             "polyfills": "src/polyfills.ts",
             "assets": [
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "node_modules/leaflet/dist/images",
+                "output": "assets/img"
+              }
             ],
             "styles": [
               "src/scss/main.scss"
