--- a/ui/package.json
+++ b/ui/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser-dynamic": "9.0.1",
     "@angular/router": "9.0.1",
     "@angular/upgrade": "9.0.1",
+    "@asymmetrik/ngx-leaflet": "^6.0.1",
     "@fortawesome/fontawesome-free": "^5.12.1",
     "@ngui/datetime-picker": "0.16.2",
     "@stomp/ng2-stompjs": "^7.2.0",
@@ -79,6 +80,7 @@
     "jsplumb": "2.1.3",
     "jszip": "^3.2.1",
     "konva": "^3.2.4",
+    "leaflet": "^1.6.0",
     "lodash": "3.10.1",
     "ng-dynamic-component": "4.0.3",
     "ng-file-upload": "9.0.13",
@@ -110,6 +112,7 @@
     "@types/angular": "^1.6.43",
     "@types/jasmine": "~2.8.3",
     "@types/jqueryui": "^1.12.7",
+    "@types/leaflet": "^1.5.9",
     "@types/node": "^12.11.1",
     "@types/rx": "^4.1.1",
     "codelyzer": "^5.1.2",
