Clean NPM cache in workflow file

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,8 +97,8 @@ jobs:
       - name: Build UI
         working-directory: ./ui
         run: |
-          NODE_PATH=/cache/node_modules
           NODE_OPTIONS=--max_old_space_size=6096
+          npm cache clean
           npm install --unsafe-perm
           npm run build
       - name: Build and Push Docker UI Image
