Move dashboardv2 module to dashboard directory

--- a/ui/deployment/dev/config.yml
+++ b/ui/deployment/dev/config.yml
@@ -21,10 +21,9 @@ modules:
   - spEditor
   - spPipelines
   - spConnect
-#  - spDashboard
+  - spDashboard
   - spAppOverview
   - spAdd
   - spMyElements
   - spDataExplorer
   - spConfiguration
-  - spDashboard2
