--- a/pom.xml
+++ b/pom.xml
@@ -554,11 +554,11 @@
                     </rules>
                 </configuration>
             </plugin>
-            <!--            <plugin>-->
-            <!--                <groupId>org.apache.streampipes</groupId>-->
-            <!--                <artifactId>streampipes-maven-plugin</artifactId>-->
-            <!--                <version>1.0-SNAPSHOT</version>-->
-            <!--            </plugin>-->
+                        <plugin>
+                            <groupId>org.streampipes</groupId>
+                            <artifactId>streampipes-maven-plugin</artifactId>
+                            <version>1.0-SNAPSHOT</version>
+                        </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
