--- a/streampipes-node-controller-container/pom.xml
+++ b/streampipes-node-controller-container/pom.xml
@@ -66,12 +66,11 @@
         </dependency>
 <!--        </dependency>-->
         <!-- used for gathering system information-->
-<!--        <dependency>-->
-<!--            <groupId>com.github.oshi</groupId>-->
-<!--            <artifactId>oshi-core</artifactId>-->
-<!--            <version>4.1.1</version>-->
-<!--        </dependency>-->
-
+        <dependency>
+            <groupId>com.github.oshi</groupId>
+            <artifactId>oshi-core</artifactId>
+            <version>4.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
