--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -12,23 +12,11 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-ARG BUILDER_IMAGE=node:13.8.0-alpine3.11
+
 ARG BASE_IMAGE=nginx
-
-FROM $BUILDER_IMAGE AS builder
-
-ENV NODE_PATH=/cache/node_modules \
-    NODE_OPTIONS="--max_old_space_size=6096"
-
-WORKDIR /builder/app
-
-COPY . ./
-RUN npm install --unsafe-perm; \
-    npm run build
-
 FROM $BASE_IMAGE
 
-COPY --from=builder /builder/app/dist/ /usr/share/nginx/html/
+COPY dist/ /usr/share/nginx/html/
 
 COPY nginx_config/nginx.conf /etc/nginx/nginx.conf
 COPY nginx_config/default.conf /etc/nginx/conf.d/default.conf
