--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
         <snakeyaml.version>1.25</snakeyaml.version>
         <xerces.version>2.9.1</xerces.version>
         <zstd-jni.version>1.4.3-1</zstd-jni.version>
+        <mqtt-client.version>1.12</mqtt-client.version>
 
         <maven-shade-plugin.version>3.0.0</maven-shade-plugin.version>
     </properties>
@@ -306,6 +307,11 @@
                 <groupId>xerces</groupId>
                 <artifactId>xercesImpl</artifactId>
                 <version>${xerces.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.fusesource.mqtt-client</groupId>
+                <artifactId>mqtt-client</artifactId>
+                <version>${mqtt-client.version}</version>
             </dependency>
 
             <!-- Test dependencies -->
