--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,7 @@
         <log4j.version>2.12.1</log4j.version>
         <logback-classic.version>1.2.3</logback-classic.version>
         <maven-invoker.version>2.2</maven-invoker.version>
+        <mqtt-client.version>1.12</mqtt-client.version>
         <objenesis.version>2.5.1</objenesis.version>
         <okio.version>1.16.0</okio.version>
         <okhttp.version>3.12.2</okhttp.version>
@@ -515,6 +516,11 @@
                 <version>${elasticsearch.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.fusesource.mqtt-client</groupId>
+                <artifactId>mqtt-client</artifactId>
+                <version>${mqtt-client.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.jboss.logging</groupId>
                 <artifactId>jboss-logging</artifactId>
                 <version>${jboss-logging.version}</version>
@@ -830,6 +836,7 @@
         <module>streampipes-connect-container-worker</module>
         <module>streampipes-container-base</module>
         <module>streampipes-node-controller-container</module>
+        <module>streampipes-messaging-mqtt</module>
     </modules>
 
     <profiles>
