--- a/streampipes-pipeline-elements-all-jvm/pom.xml
+++ b/streampipes-pipeline-elements-all-jvm/pom.xml
@@ -48,6 +48,12 @@
         </dependency>
         <dependency>
             <groupId>org.apache.streampipes</groupId>
+            <artifactId>streampipes-processors-text-mining-jvm</artifactId>
+            <version>0.65.1-SNAPSHOT</version>
+            <classifier>embed</classifier>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-processors-transformation-jvm</artifactId>
             <version>0.65.1-SNAPSHOT</version>
             <classifier>embed</classifier>
