Add maven-shade-plugin version

--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,7 @@
         <maven.jar.plugin.version>3.1.2</maven.jar.plugin.version>
         <maven.source.plugin.version>3.1.0</maven.source.plugin.version>
         <maven.dependency.check.plugin.version>5.2.2</maven.dependency.check.plugin.version>
+        <maven.shade.plugin.version>3.2.3</maven.shade.plugin.version>
     </properties>
 
     <name>Apache StreamPipes (incubating)</name>
@@ -942,7 +943,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-shade-plugin</artifactId>
-                    <version>${maven-shade-plugin.version}</version>
+                    <version>${maven.shade.plugin.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
