--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 
     <groupId>org.apache.streampipes</groupId>
     <artifactId>streampipes-parent</artifactId>
-    <version>0.66.0-SNAPSHOT</version>
+    <version>0.67.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
@@ -1193,7 +1193,7 @@
         <developerConnection>scm:git:ssh://git@github.com/apache/incubator-streampipes.git</developerConnection>
         <connection>scm:git:ssh://git@github.com/apache/incubator-streampipes.git</connection>
         <url>https://github.com/apache/incubator-streampipes</url>
-      <tag>rel/0.66.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <issueManagement>
