--- a/ui/deployment/rel/config.yml
+++ b/ui/deployment/rel/config.yml
@@ -14,9 +14,9 @@
 # limitations under the License.
 
 login:
-  backgroundImage: 'deployment/dev/img/background.png'
-  logo: 'deployment/dev/img/logo.png'
-  logo-right: 'deployment/dev/img/sp-logo-right-white.png'
+  backgroundImage: 'deployment/rel/img/background.png'
+  logo: 'deployment/rel/img/logo.png'
+  logo-right: 'deployment/rel/img/sp-logo-right-white.png'
 modules:
   - spEditor
   - spPipelines
