--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <dependency.locations.enabled>false</dependency.locations.enabled>
-        <owasp.check.skip>false</owasp.check.skip>
+        <owasp.check.skip>true</owasp.check.skip>
 
         <activemq-client.version>5.15.9</activemq-client.version>
         <asm.version>7.0</asm.version>
